--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.14",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "pure-rand": "^6.1.0",
