Add code audit and coding practices docs, update tests
Added CODE_AUDIT_REPORT.md and CODING_PRACTICES.md for comprehensive documentation and standards. Removed unused AsyncQueue utility. Updated several components to fix minor TypeScript issues (unused imports, missing style prop). Added madge and circular dependency check script to package.json. Added new tests for EventLogger, Logger, and validation logic.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "type-check": "tsc --noEmit",
-    "lint": "eslint . --ext .ts,.tsx"
+    "lint": "eslint . --ext .ts,.tsx",
+    "circular": "madge --circular --extensions ts,tsx src/"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.14",
@@ -36,6 +37,7 @@
     "fast-check": "^3.23.2",
     "jest-axe": "^10.0.0",
     "jsdom": "^27.0.1",
+    "madge": "^8.0.0",
     "typescript": "^5.9.3",
     "vite": "^5.4.20",
     "vitest": "^2.1.9"
