Add graphics system docs and onboarding updates
Added GRAPHICS_CURRENT_STATE.md documenting the current state of the graphics system, including completed features, known issues, and next steps. Updated GRAPHICS_ONBOARDING.md with implementation details, technical references, and prioritized tasks for future visual polish. Added new scripts for graphics audit, progress, and screenshot automation. Updated package.json for new tooling.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "test:coverage": "vitest run --coverage",
     "type-check": "tsc --noEmit",
     "lint": "eslint . --ext .ts,.tsx",
-    "circular": "madge --circular --extensions ts,tsx src/"
+    "circular": "madge --circular --extensions ts,tsx src/",
+    "graphics:audit": "node scripts/graphics-audit.mjs",
+    "graphics:progress": "node scripts/graphics-progress.mjs",
+    "graphics:screenshot": "node scripts/graphics-screenshot.mjs",
+    "graphics:check": "npm run graphics:audit && npm run graphics:progress"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.14",
